# m3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
src/: main.cpp  str.cpp  str.h  sys.cpp  sys.h
